[package]
name = "locked-token-pos-creator"
version = "0.0.0"
authors = ["contact@dharitri.org"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.dharitri-sc]
version = "=1.11.10"
#path = "/home/dugong/Desktop/teja-work/teja-work/my_works/rs-sdks/drt-rs-sdk-0.50.5/framework/base"
features = ["dcdt-token-payment-legacy-decode"]

[dependencies.auto-pos-creator]
path = "../auto-pos-creator"

[dependencies.energy-query]
#git = "https://github.com/TerraDharitri/drt-sc-exchange"
#varsha rev = "c061a85"
path = "/home/dugong/Desktop/teja-work/my_works/rs-repos-verified-completed/drt-sc-exchange-3.0.7/drt-sc-exchange-3.0.7/energy-integration/common-modules/energy-query"


[dependencies.utils]
#git = "https://github.com/TerraDharitri/drt-sc-exchange"
#varsha rev = "c061a85"
path = "/home/dugong/Desktop/teja-work/my_works/rs-repos-verified-completed/drt-sc-exchange-3.0.7/drt-sc-exchange-3.0.7/common/modules/utils"


[dependencies.energy-factory]
#git = "https://github.com/TerraDharitri/drt-sc-exchange"
#varsha rev = "c061a85"
path = "/home/dugong/Desktop/teja-work/my_works/rs-repos-verified-completed/drt-sc-exchange-3.0.7/drt-sc-exchange-3.0.7/locked-asset/energy-factory"


[dependencies.pair]
#git = "https://github.com/TerraDharitri/drt-sc-exchange"
#varsha rev = "c061a85"
path = "/home/dugong/Desktop/teja-work/my_works/rs-repos-verified-completed/drt-sc-exchange-3.0.7/drt-sc-exchange-3.0.7/dex/pair"

[dependencies.router]
#git = "https://github.com/TerraDharitri/drt-sc-exchange"
#varsha rev = "c061a85"
path = "/home/dugong/Desktop/teja-work/my_works/rs-repos-verified-completed/drt-sc-exchange-3.0.7/drt-sc-exchange-3.0.7/dex/router"

[dependencies.proxy_dex]
#git = "https://github.com/TerraDharitri/drt-sc-exchange"
#varsha rev = "c061a85"
path = "/home/dugong/Desktop/teja-work/my_works/rs-repos-verified-completed/drt-sc-exchange-3.0.7/drt-sc-exchange-3.0.7/locked-asset/proxy_dex"

[dependencies.common_structs]
#git = "https://github.com/TerraDharitri/drt-sc-exchange"
#varsha rev = "c061a85"
path = "/home/dugong/Desktop/teja-work/my_works/rs-repos-verified-completed/drt-sc-exchange-3.0.7/drt-sc-exchange-3.0.7/common/common_structs"

[dependencies.simple-lock]
#git = "https://github.com/TerraDharitri/drt-sc-exchange"
#varsha rev = "c061a85"
path = "/home/dugong/Desktop/teja-work/my_works/rs-repos-verified-completed/drt-sc-exchange-3.0.7/drt-sc-exchange-3.0.7/locked-asset/simple-lock"

[dependencies.read_external_storage]
path = "../common/modules/read_external_storage"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"

[dev-dependencies.dharitri-sc-scenario]
version = "=1.11.10"
#path = "/home/dugong/Desktop/teja-work/teja-work/my_works/rs-sdks/drt-rs-sdk-0.50.5/framework/scenario"

[dev-dependencies.dharitri-sc-modules]
version = "=1.11.10"
#path = "/home/dugong/Desktop/teja-work/my_works/rs-sdks/drt-rs-sdk-0.50.5/contracts/modules"

[dev-dependencies.pausable]
#git = "https://github.com/TerraDharitri/drt-sc-exchange"
#varsha rev = "c061a85"
path = "/home/dugong/Desktop/teja-work/my_works/rs-repos-verified-completed/drt-sc-exchange-3.0.7/drt-sc-exchange-3.0.7/common/modules/pausable"

[dev-dependencies.farm_base_impl]
#git = "https://github.com/TerraDharitri/drt-sc-exchange"
#varsha rev = "c061a85"
path = "/home/dugong/Desktop/teja-work/my_works/rs-repos-verified-completed/drt-sc-exchange-3.0.7/drt-sc-exchange-3.0.7/common/modules/farm/farm_base_impl"

[dev-dependencies.config]
#git = "https://github.com/TerraDharitri/drt-sc-exchange"
#varsha rev = "c061a85"
path = "/home/dugong/Desktop/teja-work/my_works/rs-repos-verified-completed/drt-sc-exchange-3.0.7/drt-sc-exchange-3.0.7/common/modules/farm/config"

[dev-dependencies.farm_token]
#git = "https://github.com/TerraDharitri/drt-sc-exchange"
#varsha rev = "c061a85"
path = "/home/dugong/Desktop/teja-work/my_works/rs-repos-verified-completed/drt-sc-exchange-3.0.7/drt-sc-exchange-3.0.7/common/modules/farm/farm_token"

[dev-dependencies.rewards]
#git = "https://github.com/TerraDharitri/drt-sc-exchange"
#varsha rev = "c061a85"
path = "/home/dugong/Desktop/teja-work/my_works/rs-repos-verified-completed/drt-sc-exchange-3.0.7/drt-sc-exchange-3.0.7/common/modules/farm/rewards"

[dev-dependencies.sc_whitelist_module]
#git = "https://github.com/TerraDharitri/drt-sc-exchange"
#varsha rev = "c061a85"
path = "/home/dugong/Desktop/teja-work/my_works/rs-repos-verified-completed/drt-sc-exchange-3.0.7/drt-sc-exchange-3.0.7/common/modules/sc_whitelist_module"

[dev-dependencies.farm-boosted-yields]
#git = "https://github.com/TerraDharitri/drt-sc-exchange"
#varsha rev = "c061a85"
path = "/home/dugong/Desktop/teja-work/my_works/rs-repos-verified-completed/drt-sc-exchange-3.0.7/drt-sc-exchange-3.0.7/energy-integration/farm-boosted-yields"

[dev-dependencies.farm]
#git = "https://github.com/TerraDharitri/drt-sc-exchange"
#varsha rev = "c061a85"
path = "/home/dugong/Desktop/teja-work/my_works/rs-repos-verified-completed/drt-sc-exchange-3.0.7/drt-sc-exchange-3.0.7/dex/farm"

[dev-dependencies.farm-with-locked-rewards]
#git = "https://github.com/TerraDharitri/drt-sc-exchange"
#varsha rev = "c061a85"
path = "/home/dugong/Desktop/teja-work/my_works/rs-repos-verified-completed/drt-sc-exchange-3.0.7/drt-sc-exchange-3.0.7/dex/farm-with-locked-rewards"

[dev-dependencies.locking_module]
#git = "https://github.com/TerraDharitri/drt-sc-exchange"
#varsha rev = "c061a85"
path = "/home/dugong/Desktop/teja-work/my_works/rs-repos-verified-completed/drt-sc-exchange-3.0.7/drt-sc-exchange-3.0.7/common/modules/locking_module"
