[package]
name = "lending-pool"
version = "0.0.0"
authors = ["contact@dharitri.org"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"
# [dependencies.dharitri-sc]        #thivenee
# version = "0.41.0"

[dependencies.dharitri-sc]
path = "/home/dugong/Documents/my_works-main/rs-sdks/drt-rs-sdk-0.41.0/framework/base"

[dependencies.liquidity-pool]
path = "../liquidity_pool"

[dependencies.price-aggregator-proxy]
path = "../common/price-aggregator-proxy"

[dependencies.common-structs]
path = "../common/structs"

[dependencies.common-checks]
path = "../common/checks"

[dependencies.common-tokens]
path = "../common/tokens"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"

# [dev-dependencies.dharitri-sc-scenario]      #thrivenee
# version = "0.41.0"

[dev-dependencies.dharitri-sc-scenario]
path = "/home/dugong/Documents/my_works-main/rs-sdks/drt-rs-sdk-0.41.0/framework/scenario"

[dev-dependencies.aggregator-mock]
path = "../aggregator_mock"
