[package]
name = "liquidity-pool"
version = "0.0.1"
authors = ["contact@dharitri.org"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"
# [dependencies.dharitri-sc]      #thrivenee
# version = "0.41.0"

[dependencies.dharitri-sc]
path = "/home/dugong/Documents/my_works-main/rs-sdks/drt-rs-sdk-0.41.0/framework/base"

[dependencies.common-structs]
path = "../common/structs"

[dependencies.common-checks]
path = "../common/checks"

[dependencies.common-tokens]
path = "../common/tokens"

[dependencies.price-aggregator-proxy]
path = "../common/price-aggregator-proxy"
# [dev-dependencies.dharitri-sc-scenario]     #thrivenee
# version = "0.41.0"

[dev-dependencies.dharitri-sc-scenario]
path = "/home/dugong/Documents/my_works-main/rs-sdks/drt-rs-sdk-0.41.0/framework/scenario"
