[package]
name = "chain-config"
version = "0.0.0"
authors = ["contact@dharitri.org"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dev-dependencies]
num-bigint = "0.4.2"

# [dev-dependencies.dharitri-sc-scenario]           #thrivenee
# version = "=0.54.0"

# [dependencies.dharitri-sc]
# version = "=0.54.0"

# [dependencies.dharitri-sc-modules]
# version = "=0.54.0"

[dev-dependencies.dharitri-sc-scenario]
path = "/home/dugong/Documents/my_works-main/rs-sdks/drt-rs-sdk-0.54.0/framework/scenario"

[dependencies.dharitri-sc]
path = "/home/dugong/Documents/my_works-main/rs-sdks/drt-rs-sdk-0.54.0/framework/base"

[dependencies.dharitri-sc-modules]
path = "/home/dugong/Documents/my_works-main/rs-sdks/drt-rs-sdk-0.54.0/contracts/modules/"
