[package]
name = "dcdt-safe"
version = "0.0.0"
authors = ["contact@dharitri.org"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.transaction]
path = "../common/transaction"

[dependencies.tx-batch-module]
path = "../common/tx-batch-module"

[dependencies.max-bridged-amount-module]
path = "../common/max-bridged-amount-module"

[dependencies.bls-signature]
path = "../common/bls-signature"

[dependencies.setup-phase]
path = "../common/setup-phase"

[dependencies.token-whitelist]
path = "../common/token-whitelist"

[dependencies.utils]
path = "../common/utils"

[dependencies.fee-market]
path = "../fee-market"

[dependencies.header-verifier]
path = "../header-verifier"

# [dependencies.dharitri-sc]      #thrivenee
# version = "=0.54.0"

# [dependencies.dharitri-sc-modules]
# version = "=0.54.0"

[dependencies.dharitri-sc]
path = "/home/dugong/Documents/my_works-main/rs-sdks/drt-rs-sdk-0.54.0/framework/base"

[dependencies.dharitri-sc-modules]
path = "/home/dugong/Documents/my_works-main/rs-sdks/drt-rs-sdk-0.54.0/contracts/modules/"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"

# [dev-dependencies.dharitri-sc-scenario]       #thrivenee
# version = "=0.54.0"

[dev-dependencies.dharitri-sc-scenario]
path = "/home/dugong/Documents/my_works-main/rs-sdks/drt-rs-sdk-0.54.0/framework/scenario"
