[package]
name = "header-verifier"
version = "0.0.0"
authors = ["contact@dharitri.org"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

# [dependencies.dharitri-sc]     #thrivenee
# version = "0.54.0"

[dependencies.dharitri-sc]
path = "/home/dugong/Documents/my_works-main/rs-sdks/drt-rs-sdk-0.54.0/framework/base"

[dependencies.bls-signature]
path = "../common/bls-signature"

[dependencies.transaction]
path = "../common/transaction"

[dev-dependencies]
num-bigint = "0.4.2"

# [dev-dependencies.dharitri-sc-scenario]     #thrivenee
# version = "0.54.0"

[dev-dependencies.dharitri-sc-scenario]
path = "/home/dugong/Documents/my_works-main/rs-sdks/drt-rs-sdk-0.54.0/framework/scenario"
